RESOLVED FIXED310324
[AppKit Gestures] REGRESSION(309295@main): PDF form fields unexpectedly focused after automated input
https://bugs.webkit.org/show_bug.cgi?id=310324
Summary [AppKit Gestures] REGRESSION(309295@main): PDF form fields unexpectedly focus...
Abrar Rahman Protyasha
Reported 2026-03-19 20:28:30 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-03-19 20:38:13 PDT
EWS
Comment 2 2026-03-20 01:26:35 PDT
Committed 309603@main (14a440f03cae): <https://commits.webkit.org/309603@main> Reviewed commits have been landed. Closing PR #60977 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.