[AppKit Gestures] REGRESSION(309295@main): PDF form fields unexpectedly focused after automated input https://bugs.webkit.org/show_bug.cgi?id=310324 rdar://172971256

Reviewed by Aditya Keerthi.

Automated input should not lead to PDF interactions. In 309295@main, the
mouse tracking GR we added undid this assumption since it continuously
produces a stream of mouse events that funnel through EventHandler into
the plugin. In this patch, we restore status quo by ducking out of the
way for automation inputs.

* Source/WebKit/WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::handleEvent):

Canonical link: https://commits.webkit.org/309603@main